# pmdsky-debug

./: .gitignore  CREDITS.txt  Cargo.toml  README.md  check_and_format.sh
.github/ISSUE_TEMPLATE/: bug_report.md  research-topic.md
.github/workflows/: check-function-sync.yml  check-headers.yml  check-resymgen.yml  check-symbol-compatibility.yml  check-symbol-header-sync.yml  check-symbols.yml  release.yml
docs/: contributing.md  ghidra-setup.md  overlays.md  resources.md  resymgen.md  using-debug-info.md
headers/: .clang-format  Makefile  README.md  add_header_docstrings.py  augment_headers.py  pmdsky.h  pmdsky_eu.h  pmdsky_jp.h  pmdsky_na.h  symbol_check.py  versions.h
headers/data/: arm9.h  data.h  literals.h  overlay00.h  overlay01.h  overlay02.h  overlay03.h  overlay04.h  overlay05.h  overlay06.h  overlay07.h  overlay08.h  overlay09.h  overlay10.h  overlay11.h  overlay12.h  overlay13.h  overlay14.h  overlay15.h  overlay16.h  overlay17.h  overlay18.h  overlay19.h  overlay20.h  overlay21.h  overlay22.h  overlay23.h  overlay24.h  (+12 more)
src/: checks.rs  data_formats.rs  formatting.rs  lib.rs  main.rs  transform.rs  util.rs
symbols/: .ram.yml.swp  LICENSE.txt  README.md  arm7.yml  arm9.yml  dtcm.yml  literals.yml  overlay00.yml  overlay01.yml  overlay02.yml  overlay03.yml  overlay04.yml  overlay05.yml  overlay06.yml  overlay07.yml  overlay08.yml  overlay09.yml  overlay10.yml  overlay11.yml  overlay12.yml  overlay13.yml  overlay14.yml  overlay15.yml  overlay16.yml  overlay17.yml  overlay18.yml  overlay19.yml  overlay20.yml  overlay21.yml  overlay22.yml  overlay23.yml  overlay24.yml  overlay25.yml  overlay26.yml  overlay27.yml  overlay28.yml  overlay29.yml  overlay30.yml  overlay31.yml  overlay32.yml  (+4 more)
tools/: README.md  ansi.py  arm5correlate.py  arm5find.py  new_symbol_header_check.py  offsets.py  resymgen.py  symbols_vfill.py  symcompat.py  symdiff.py  xmapcorrelate.py
(+71 files in other folders)
