[package]
name = "resymgen"
version = "0.1.0"
authors = ["UsernameFodder <usernamefodder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
similar = "2.1.0"
syn = "1.0.82"
tempfile = "3.2.0"
termcolor = "1.1.2"
