[package]
name = "resymgen"
description = "Generates symbol tables for reverse engineering applications from a YAML specification"
version = "0.6.0"
authors = ["UsernameFodder <usernamefodder@gmail.com>"]
edition = "2018"
rust-version = "1.58"
repository = "https://github.com/UsernameFodder/pmdsky-debug"
license = "GPL-3.0-only"
readme = "docs/resymgen.md"
include = [
    "src/**",
    ".gitignore",
]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.34.0"
csv = "1.1.6"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.21"
similar = "2.1.0"
syn = "1.0.82"
tempfile = "3.2.0"
termcolor = "1.1.2"
